[package]
name = "qem-unzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.4", default-features = true }
packed_struct = "0.10"
clap = { version = "4.0.29", features = ["derive"] }

